# few_special_functions

./: .gitignore  Cargo.toml  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
benches/: benchmarks.rs
benches/benchmarks/: clausen.rs  debye.rs  fermi_dirac.rs  fresnel.rs  main.rs  marcum_q.rs
examples/: clausen.rs  debye.rs  fermi_dirac.rs  fresnel.rs
examples/survey/: main.rs  table.rs
src/: clausen.rs  debye.rs  fermi_dirac.rs  fresnel.rs  lib.rs  main.rs  marcum_q.rs  python.rs
tests/: clausen.rs  debye.rs  fermi_dirac.rs  fresnel.rs  marcum_q.rs
tests/marcum_q/: helpers.rs  main.rs
