[package]
name = "few_special_functions"
version = "0.1.0"
edition = "2024"
description = "A few special mathematical functions"
keywords = ["mathematics", "special-functions", "numerics"]   # max 5
license = "MIT"

[lib]
name = "few_special_functions"
# cdylib = Python extension module; rlib = normal Rust library + cargo test
crate-type = ["cdylib", "rlib"]

[features]
# Activate with: maturin build  or  cargo build --features extension-module
extension-module = ["pyo3/extension-module"]

[dependencies]
libm = "0.2"
num-complex = "0.4"
pyo3 = { version = "0.28", optional = true }

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
plotters = { version = "0.3", default-features = false, features = ["svg_backend", "line_series", "full_palette"] }

[[bench]]
name = "benchmarks"
harness = false
